--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 北哥的个人博客
+title: 老北的AI启示录
 brief-intro: 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.tinydeer.com" # the base hostname & protocol for your site
